discussion/kv_engine/142736/142736_rev37_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Remove interfaces from memcached.json [3/3]

This patch removes the old definition of interfaces through
memcached.json

Change-Id: If56d95b7ea8ee6086c6c4d80c3aea536a4a7fc9a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 17:18:27.000000000
Message: 
Uploaded patch set 37.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 18:12:04.000000000
Message: 
Patch Set 37: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9824/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9824/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9824/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8413/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36808/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/336/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31448/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10475/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11395/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11544/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11821/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19408/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
